--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "asciichartpy>=1.5.25",
     "click>=8.3.1",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
